# libb64-conan

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  conanfile.py  default.nix
include/: libb64.h
include/b64/: common.h  decode.h  encode.h
src/: libb64.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
